@@ -1,0 +1,9 @@
+# SPDX-FileCopyrightText: 2024 Shun Sakai
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+
+[tool.bumpversion]
+current_version = "0.7.13"
+
+[[tool.bumpversion.files]]
+glob = "docs/man/man1/*.1.adoc"
