@@ -5,9 +5,9 @@
 = rscrypt-dec(1)
 // Specify in UTC.
 :docdate: 2024-08-02
+:revnumber: 0.7.13
 :doctype: manpage
-ifdef::revnumber[:mansource: rscrypt {revnumber}]
-ifndef::revnumber[:mansource: rscrypt]
+:mansource: rscrypt {revnumber}
 :manmanual: General Commands Manual
 ifndef::site-gen-antora[:includedir: ./include]
 
