@@ -4,10 +4,10 @@
 
 = rscrypt-info(1)
 // Specify in UTC.
-:docdate: 2024-12-07
+:docdate: 2025-01-08
+:revnumber: 0.7.13
 :doctype: manpage
-ifdef::revnumber[:mansource: rscrypt {revnumber}]
-ifndef::revnumber[:mansource: rscrypt]
+:mansource: rscrypt {revnumber}
 :manmanual: General Commands Manual
 ifndef::site-gen-antora[:includedir: ./include]
 :ietf-datatracker: https://datatracker.ietf.org
@@ -54,11 +54,10 @@ _FILE_::
 
 == OPTIONS
 
-ifdef::json,env-github,site-gen-antora[]
 *-j*, *--json*::
 
-  Output the encryption parameters as JSON.
-endif::[]
+  Output the encryption parameters as JSON. This option is available if the
+  `json` feature is enabled at compile time.
 
 *-h*, *--help*::
 
@@ -82,11 +81,9 @@ Print the encryption parameters:{blank}::
 
   $ *rscrypt info data.txt.scrypt*
 
-ifdef::json,env-github,site-gen-antora[]
 Print the encryption parameters as JSON:{blank}::
 
   $ *rscrypt info -j data.txt.scrypt*
-endif::[]
 
 ifndef::site-gen-antora[include::{includedir}/section-reporting-bugs.adoc[]]
 ifdef::site-gen-antora[include::partial$man/man1/include/section-reporting-bugs.adoc[]]
