@@ -91,6 +91,7 @@ publish-wasm: build-wasm
 
 # Increment the version of the command-line utility
 @bump-cli part:
+    bump-my-version bump --config-file .bumpversion-cli.toml {{part}}
     cargo set-version --bump {{part}} -p scryptenc-cli
 
 # Increment the version of the Wasm bindings
