@@ -19,6 +19,13 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/scryptenc-cli-v0.7.13\...HEAD[Unreleased]
+
+=== Changed
+
+* Description of options which depends on the features are always available
+  ({pull-request-url}/530[#530])
+
 == {compare-url}/scryptenc-cli-v0.7.12\...scryptenc-cli-v0.7.13[0.7.13] - 2024-08-04
 
 === Changed
